Remove warnings from old Java syntax.